# cli-forge

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
benches/: bench.rs
dev/: DIRECTIVES.md  ROADMAP.md
docs/: API.md
docs/release/: v0.1.0.md  v0.2.0.md  v0.2.5.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v1.0.0.md
examples/: arguments.rs  auth.rs  colors.rs  commands.rs  quick_start.rs  status_report.rs  three_paths.rs
src/: app.rs  arg.rs  auth.rs  color.rs  command.rs  crosspath_tests.rs  error.rs  help.rs  lib.rs  matches.rs  output.rs  parser.rs  registry.rs  style.rs  tags.rs  terminal.rs
tests/: allocation.rs  registration.rs
